<resources>
    <string name="app_name">Piggy Calculator</string>
    <string name="loan_amount">Total amount</string>
    <string name="down_payment">Down payment</string>
    <string name="interest_rate">Interest rate, %</string>
    <string name="loan_terms">Terms</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="your_monthly_payment">Monthly payment</string>
    <string name="togglebutton">ToggleButton</string>
    <string-array name="terms">
        <item>months</item>
        <item>years</item>
    </string-array>
</resources>
