<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">
        <ToggleButton
            android:layout_weight="0"
            android:text="@string/togglebutton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/toggleLoanAmount"/>
        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="3dp"
                android:orientation="vertical">
            <TextView
                android:text="@string/loan_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:gravity="bottom|left"
                android:id="@+id/textLoanAmount"
                android:textSize="15sp"
                android:textColor="#673AB7"/>
            <EditText
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789,"
                android:singleLine="true"
                android:ems="10"
                android:textStyle="bold"
                android:id="@+id/editLoanAmount"
                android:textSize="20sp"
                tools:ignore="Autofill"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:orientation="horizontal">
        <ToggleButton
            android:layout_weight="0"
            android:text="@string/togglebutton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/toggleDownPayment"/>
        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="3dp"
                android:orientation="vertical">
            <TextView
                android:text="@string/down_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:id="@+id/textDownPayment"
                android:textSize="15sp"
                android:gravity="bottom|left"
                android:textColor="#673AB7"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:ems="10"
                tools:ignore="Autofill"
                android:id="@+id/editDownPayment"
                android:textSize="20sp" android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:orientation="horizontal">
    <ToggleButton
            android:layout_weight="0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/togglebutton"
            android:id="@+id/toggleInterestRate"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="3dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/interest_rate"
                android:id="@+id/textInterestRate"
                android:gravity="bottom|left"
                android:textSize="15sp"
                android:textColor="#673AB7"/>
            <EditText
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:ems="10"
                tools:ignore="Autofill"
                android:id="@+id/editInterestRate"
                android:textSize="20sp" android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">
    <ToggleButton
            android:layout_weight="0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/togglebutton"
            android:id="@+id/toggleLoanTerms"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="3dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/loan_terms"
                android:id="@+id/textLoanTerms"
                android:gravity="bottom|left"
                android:textSize="15sp"
                android:textColor="#673AB7"/>
            <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">
                <EditText
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:ems="10"
                    tools:ignore="Autofill"
                    android:id="@+id/editLoanTerms"
                    android:textSize="20sp" android:textStyle="bold"/>
                <Spinner
                     android:layout_width="120dp"
                     android:layout_height="56dp"
                     android:id="@+id/spinnerTerms">
                </Spinner>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">
        <ToggleButton
                android:layout_weight="0"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/togglebutton"
                android:id="@+id/toggleMonthlyPayment"/>
        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="3dp"
                android:orientation="vertical">
            <TextView
                android:text="@string/your_monthly_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:id="@+id/textMontlyPayment"
                android:gravity="bottom|left"
                android:textSize="15sp"
                android:textColor="#673AB7"/>
            <EditText
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:ems="10"
                tools:ignore="Autofill"
                android:id="@+id/editMonthlyPayment"
                android:textSize="20sp" android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>